terraform-cluster/route_table-subnet-association.tf
resource "aws_route_table_association" "this" {
  for_each = aws_subnet.this
  subnet_id      = each.id
  route_table_id = aws_route_table.this.id
}
